[package]
name = "bridge-phalanx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
argh = "0.1.10"
chrono = "0.4.23"
eff-wordlist = "1.0.2"
env_logger = "0.10.0"
fastrand = "1.8.0"
log = "0.4.17"
once_cell = "1.17.0"
rand = "0.8.5"
serde = {version="1.0.152", features=["derive"]}
serde_json = "1.0.91"
serde_yaml = "0.9.17"
smol = "1.3.0"

sqlx = { version = "0.6", features = [ "runtime-async-std-rustls", "postgres", "chrono" ] }
