[package]
name = "bridge-phalanx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acidjson = "0.1.2"
anyhow = "1.0.68"
argh = "0.1.10"
async-compat = "0.2.1"
async-trait = "0.1.68"
chrono = "0.4.23"
dashmap = "5.4.0"
eff-wordlist = "1.0.2"
env_logger = "0.10.0"
fastrand = "1.8.0"
futures-concurrency = "7.6.2"
futures-util = "0.3.26"
isahc = {version="1.7.2", features=["json"]}
log = "0.4.17"
once_cell = "1.17.0"
openstack = "0.5.0"
parking_lot = "0.12.1"
rand = "0.8.5"
scopeguard = "1.1.0"
serde = {version="1.0.152", features=["derive"]}
serde_json = "1.0.91"
serde_urlencoded = "0.7.1"
serde_yaml = "0.9.17"
smol = "1.3.0"
smol-timeout = "0.6.0"

sqlx = { version = "0.6", features = [ "runtime-async-std-rustls", "postgres", "chrono" ] }

[profile.dev]
panic = 'abort'

[profile.release]
panic = 'abort'
